--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1"
   },
   "dependencies": {
     "react": "^15.5.4",
+    "react-ace": "^4.2.2",
     "react-dom": "^15.5.4",
+    "reconnecting-websocket": "^3.0.3",
+    "rx": "^4.1.0",
     "styled-components": "^1.4.6"
   }
 }
