--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^2.5.1"
   },
   "dependencies": {
+    "ansi-to-html": "^0.6.2",
     "react": "^15.5.4",
     "react-ace": "^4.2.2",
     "react-dom": "^15.5.4",
